--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ ul li {
     border-radius: 50% 50% 20% 20%/50%; 
     -webkit-border-radius: 50% 50% 20% 20%/50%; 
     -moz-border-radius: 50% 50% 20% 20%/50%;
+    block_spacing: 10px;
 }
 ul li a {
     text-decoration: none;
@@ -29,6 +30,7 @@ ul li a {
     border-radius: 50% 50% 20% 20%/50%; 
     -webkit-border-radius: 50% 50% 20% 20%/50%; 
     -moz-border-radius: 50% 50% 20% 20%/50%;
+    block_spacing: 10px;
 }
 ul li a:hover {
 	background-color: green;
