--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ ul li {
     -webkit-border-radius: 50% 50% 20% 20%/50%; 
     -moz-border-radius: 50% 50% 20% 20%/50%;
     block_spacing: 10px;
+    margin: 5px;
 }
 ul li a {
     text-decoration: none;
@@ -31,6 +32,7 @@ ul li a {
     -webkit-border-radius: 50% 50% 20% 20%/50%; 
     -moz-border-radius: 50% 50% 20% 20%/50%;
     block_spacing: 10px;
+    margin: 5px;
 }
 ul li a:hover {
 	background-color: green;
