--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
     background: url("fg.jpg") no-repeat;
     background-size: cover;
     font-family: Arial;
+    margin:0px auto;
 }
 ul {
     margin: 0px;
