--- a/style.css
+++ b/style.css
@@ -1,13 +1,14 @@
 body {
     background-size: cover;
     font-family: Arial;
-    margin:0px auto;
+	text-align:center;
 }
 ul {
     margin: 0px;
     padding: 0px;
     list-style: none;
     right: 50px;
+	text-align:center
 }
 ul li {
     float: left;
@@ -29,21 +30,22 @@ ul li a {
     border-radius: 50% 50% 20% 20%/50%; 
     -webkit-border-radius: 50% 50% 20% 20%/50%; 
     -moz-border-radius: 50% 50% 20% 20%/50%;
+	text-align:center
 }
 ul li a:hover {
 	background-color: green;
 }
 ul li ul li {
     display: none;
+	text-align:center
 }
 ul li:hover ul li {
     display: block;
 }
 #menu {
     position:absolute;
-    left:220px;
+    left:50%;
     top:25px;
-    text-align: center;
 }
 #img1 img {
     max-width:225px;
@@ -53,7 +55,7 @@ ul li:hover ul li {
 }
 #img1 {
     position:absolute;
-    left:0px;
+    left:30%;
     top:-25px;
 }
 #wrapper {
@@ -63,14 +65,19 @@ ul li:hover ul li {
     max-width: 100%;
     text-align: center;
     background-color:;
+	padding-bottom: 100px;
  }
-
-}
 #din {
 }
 #oo {
+	position:absolute;
+	top: 50%;
+	left: 35%
 }
-#foot {
-    position: fixed;
-	bottom: 0;
+#foot p {
+	height: 100px;
+	position:absolute;
+    bottom:0px;
+    right: 40%;
+	top: 90%
 }
