--- a/css/style.css
+++ b/css/style.css
@@ -341,7 +341,7 @@
 			}
 
 	ul.style {
-		padding-top: 3em;
+		padding-top: 6em;
 	}
 
 		ul.style li {
@@ -482,9 +482,9 @@
 /* Wrapper */
 
 	.wrapper.style1 {
-		padding-top: 10em;
+		padding-top: 20em;
 		padding-bottom: 2em;
-		background: url(../images/bg.jpg) no-repeat center top;
+		background: gray no-repeat center top;
 		background-size: cover;
 		background-attachment: fixed;
 		-webkit-backface-visibility: hidden;
@@ -607,7 +607,7 @@
 /* Box */
 
 	.box {
-		padding: 3em 2em;
+		padding: 1em 1em;
 		background: #FFF;
 		text-align: center;
 		border-radius: 0px 0px 6px 6px;
