--- a/default2.css
+++ b/default2.css
@@ -276,6 +276,7 @@
 	{
 		float: left;
 		width: 960px;
+		left: 50%;
 	}
 
 /*********************************************************************************/
