--- a/default2.css
+++ b/default2.css
@@ -259,23 +259,29 @@
 /* 3-column                                                                      */
 /*********************************************************************************/
 
-	.boxA,
+
+	.boxA
+	{
+		width: 480px;
+		float: left;
+		margin-right: 8px;
+		display: inline-block;
+		margin-bottom: 8px;
+	}
 	.boxB
 	{
 		width: 480px;
-	}
-
-	.boxA,
-	.boxB
-	{
+		margin-left: 8px
 		float: left;
-		margin-right: 20px;
+		margin-bottom: 8px;
+		display: inline-block;
 	}
 	
 	.boxC
 	{
-		float: left;
-		width: 960px;
+		width: 968px;
+		display: inline-block;
+		
 	}
 
 /*********************************************************************************/
@@ -538,7 +544,9 @@
 {
 	padding: 3em 2em 2em 2em;
 	border: 1px solid rgba(0,0,0,0.1);
-	border-radius: 8px;
+	border-radius: 20px;
+	height: 340px;
+	
 		text-align: center;
 }
 
@@ -566,6 +574,25 @@
 		text-align: center;
 		font-size: 3em;
 	}
+    table { 
+      border:1px solid #000; 
+      font-family: 微軟正黑體; 
+      font-size:16px; 
+      width:200px;
+      border:1px solid #000;
+      text-align:center;
+      border-collapse:collapse;
+    } 
+    th { 
+      background-color: #009FCC;
+      padding:10px;
+      border:1px solid #000;
+      color:#fff;
+    } 
+    td { 
+      border:1px solid #000;
+      padding:5px;
+    } 
 
 
 
